--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/next-auth": "^3.15.0",
+    "bcrypt": "^5.1.1",
     "better-sqlite3": "^11.7.0",
     "knex": "^3.1.0",
     "mysql": "^2.18.1",
     "mysql2": "^3.11.5",
     "next": "15.1.0",
+    "next-auth": "^4.24.11",
     "pg": "^8.13.1",
     "pg-query-stream": "^4.7.1",
     "react": "^19.0.0",
