--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev --turbopack -p 3001",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -51,6 +51,7 @@
     "input-otp": "^1.4.1",
     "knex": "^3.1.0",
     "lucide-react": "^0.468.0",
+    "motion": "^11.14.1",
     "mysql": "^2.18.1",
     "mysql2": "^3.11.5",
     "next": "15.1.0",
