--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "sqlite3": "^5.1.7",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
+    "ts-node": "^10.9.2",
     "vaul": "^1.1.1",
     "zod": "^3.24.1"
   },
