--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,12 @@
       "@/db": ["./src/lib/db.ts"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "knexfile.ts"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "knexfile.ts"
+  ],
   "exclude": ["node_modules"]
 }
